CHANGES.txt - 10/29/2001
------------------------

CHANGES IN HTMLDOC v1.8.16

    NEW FEATURES


    CHANGES


    BUG FIXES

	- HR elements didn't render properly.


CHANGES IN HTMLDOC v1.8.15

    NEW FEATURES

	- Now support media source, type, and color attributes
	  in PS output.
	- Now support per-page size, margins, headers, footers,
	  orientation, and duplexing.
	- Now support plain text for headers and footers, with $
	  variables to include page numbers and so forth.
	- New device control prolog file for printer-specific
	  option commands.
	- Now support a new continuous web page mode that
	  doesn't automatically insert a page break with each
	  HTML file or URL (--continuous).
	- Now draw border around inline images as needed.
	- Now support MacOS X (only command-line at present).
	- Now support the "page-break-before", "text-align",
	  "vertical-align" style attributes, but only for style
	  information in an element's STYLE attribute.

    CHANGES

	- Now load images into memory only as needed, and unload
	  them when no longer needed.  This provides a dramatic
	  reduction in memory usage with files that contain a
	  lot of in-line images.
	- Now use the long names for the Flate and DCT filters
	  in all non-inline PDF streams.  This avoids a stupid
	  bug in Acrobat Reader when printing to PostScript
	  printers.
	- HTMLDOC now strips any trailing GET query information
	  when saving the start of files (target) in a document.
	- Unqualified URLs (no leading scheme name, e.g. http:)
	  now default to the HTTP port (80) instead of the IPP
	  port (631).
	- Optimized the image writing code to do more efficient
	  color searching.  This provides a significant speed
	  improvement when including images.
	- Now hide all text inside SCRIPT, SELECT, and TEXTAREA
	  elements.
	- OS/2 port changes from Alexander Mai.

    BUG FIXES

	- If a document started with a heading greater than H1,
	  HTMLDOC would crash.